# test_project

./: .env_example  .gitignore  alembic.ini  database.py  docker-compose.yaml  makefile  model.py  pyproject.toml  settings.py  task.md
alembic/: env.py
alembic/versions/: 083bdadd9d7b_.py  0dfc2b3c7e61_.py  3569284e59db_.py  553529a48315_.py  5a7affdd30c2_.py  a305b74adbb3_.py  cdc99aebccee_.py  da4d9f629097_.py  f0087a14e502_.py  f734bb31739f_.py
src/: database.py  main.py  models.py
src/account/: account.py  crud.py
src/admin/: router.py
src/admin/account/: account.py  account_router.py  crud.py  schemas.py
src/admin/user/: crud.py  schema.py  user.py  user_router.py
src/auth/: db_user.py  jwt_helper.py  login.py  schemas.py  utils.py  validator.py
src/transaction/: schema.py  transaction_router.py  update.py  validator.py
src/user/: crud.py  schema.py  user_router.py  users.py
